[feat] 약국이 있을 때는 그것과 연결 및 유저객체 다시 저장